Bug 334901 - Unhelpful dialog box asking for password when the connection fails
Summary: Unhelpful dialog box asking for password when the connection fails
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-16 19:00 UTC by Dima Ryazanov
Modified: 2015-02-22 13:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: v0.9.3.4
Sentry Crash Report:


Attachments
Screenshot of the dialog box (29.87 KB, image/png)
2014-05-16 19:00 UTC, Dima Ryazanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dima Ryazanov 2014-05-16 19:00:05 UTC
Once in a while, a dialog box appears asking me to "Please provide a password below". After some investigation, I'm pretty sure it comes from the network manager applet when it fails to connect to my wired network.

There are two problems here:
- It doesn't say who is asking and why (all I see is "KDE Daemon")
- It doesn't specify which password (with no context, I'd think it's for sudo or kwallet)

The actual problem seemed to be some transient problem with my wired network adapter. When I unplugged it and plugged it back, everything started working. So ideally, network manager should just show a notification saying "failed to connect".

Reproducible: Sometimes
Comment 1 Dima Ryazanov 2014-05-16 19:00:35 UTC
Created attachment 86668 [details]
Screenshot of the dialog box
Comment 2 Lamarque V. Souza 2014-06-22 15:48:34 UTC
Git commit 059c3ef5b4cf40f7e4b37e5bdbf0fbdd0e1000f6 by Lamarque V. Souza.
Committed on 22/06/2014 at 15:44.
Pushed by lvsouza into branch 'master'.

Specify what password is needed.
FIXED-IN: v0.9.3.4

M  +1    -1    kded/passworddialog.cpp

http://commits.kde.org/plasma-nm/059c3ef5b4cf40f7e4b37e5bdbf0fbdd0e1000f6
Comment 3 Lamarque V. Souza 2014-06-22 15:48:50 UTC
Git commit f7a828c678895c9e8b74f5713b93bcc28235ea40 by Lamarque V. Souza.
Committed on 22/06/2014 at 15:44.
Pushed by lvsouza into branch '0.9.3'.

Specify what password is needed.
FIXED-IN: v0.9.3.4

M  +1    -1    kded/passworddialog.cpp

http://commits.kde.org/plasma-nm/f7a828c678895c9e8b74f5713b93bcc28235ea40
Comment 4 Dima Ryazanov 2015-02-09 18:52:01 UTC
I just got a dialog box with the following prompt:

"Please provide the password for activating connection 'connection'"

It still doesn't tell me much :-/ I don't have any wifi or wired connections named 'connection', so I still don't know what password I'm being asked for (or why).
Comment 5 Dima Ryazanov 2015-02-09 20:54:41 UTC
Ok, I've confirmed that the prompt shows up after I try to activate my wired connection - but I honestly have no idea what password I'm supposed to enter...
Comment 6 Jan Grulich 2015-02-22 13:16:52 UTC
Git commit 7aa24f41996a05f9ac2f6ec95d8889f9f16e6457 by Jan Grulich.
Committed on 22/02/2015 at 13:16.
Pushed by grulich into branch 'master'.

Show correct connection name

In ConnectionSettings name is not actual name of the connection it represents, but
the name of setting type.
Related: bug 344411

M  +1    -1    kded/passworddialog.cpp

http://commits.kde.org/plasma-nm/7aa24f41996a05f9ac2f6ec95d8889f9f16e6457
Comment 7 Jan Grulich 2015-02-22 13:17:28 UTC
Git commit 51dab26b13082e3e5c0d26d0a2e6088940953eec by Jan Grulich.
Committed on 22/02/2015 at 13:16.
Pushed by grulich into branch 'Plasma/5.2'.

Show correct connection name

In ConnectionSettings name is not actual name of the connection it represents, but
the name of setting type.
Related: bug 344411

M  +1    -1    kded/passworddialog.cpp

http://commits.kde.org/plasma-nm/51dab26b13082e3e5c0d26d0a2e6088940953eec
Comment 8 Jan Grulich 2015-02-22 13:17:55 UTC
Git commit 8b21d56a83d622fde3eba117b8de1af03dd2bded by Jan Grulich.
Committed on 22/02/2015 at 13:16.
Pushed by grulich into branch '0.9.3'.

Show correct connection name

In ConnectionSettings name is not actual name of the connection it represents, but
the name of setting type.
Related: bug 344411

M  +1    -1    kded/passworddialog.cpp

http://commits.kde.org/plasma-nm/8b21d56a83d622fde3eba117b8de1af03dd2bded