Specify what password is needed.

BUG: 334901
FIXED-IN: v0.9.3.4